src/objects/saBusinessLocation__c.object
<CustomObject>
    <fields>
        <fullName>AgencyCode__c</fullName>
        <label>代理店コード</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyName__c</fullName>
        <label>代理店名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessLocationName__c</fullName>
        <label>BusinessLocationName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SupervisorCode__c</fullName>
        <label>統括店コード</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupervisorName__c</fullName>
        <label>統括店名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>拠点</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>BusinessLocationName__c</columns>
        <columns>AgencyCode__c</columns>
        <columns>AgencyName__c</columns>
        <columns>SupervisorCode__c</columns>
        <columns>SupervisorName__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BL-{00000000}</displayFormat>
        <label>saBusinessLocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>